优化购物体验，可在Agent侧直接通过卡片形式购物
